--- a/xxl-job-core/pom.xml
+++ b/xxl-job-core/pom.xml
@@ -27,6 +27,12 @@
 			<version>${gson.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+		</dependency>
+
 		<!-- ********************** plugin ********************** -->
 		<!-- groovy-all -->
 		<dependency>
