--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
 		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
 		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 		<maven-war-plugin.version>3.3.1</maven-war-plugin.version>
+
+		<lombok.version>1.18.20</lombok.version>
 	</properties>
 
 	<build>
