--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.freemarker.settings.number_format=0.##########
 
 ### mybatis
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 
 ### xxl-job, datasource
