--- a/xxl-job-core/pom.xml
+++ b/xxl-job-core/pom.xml
@@ -65,6 +65,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.53</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
