--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>xxl-job-core</module>
 		<module>xxl-job-admin</module>
 		<module>xxl-job-executor-samples</module>
+		<module>xxl-job-workbench</module>
     </modules>
 
 	<properties>
@@ -46,6 +47,8 @@
 
 		<redisson.version>3.15.1</redisson.version>
 		<lombok.version>1.18.20</lombok.version>
+
+		<dubbo.version>2.7.3</dubbo.version>
 	</properties>
 
 	<build>
