--- a/xxl-job-workbench/src/main/resources/application.yml
+++ b/xxl-job-workbench/src/main/resources/application.yml
@@ -12,7 +12,23 @@ spring:
     username: root
     password: 123456
     driverClassName: com.mysql.cj.jdbc.Driver
-#  kafka:
-#    bootstrap-servers: localhost:9092
-#    consumer:
-#      group-id: defaultConsumerGroup
+  kafka:
+    bootstrap-servers: master:9092,slave1:9092,slave2:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      # 生产者每个批次最多提交多少条数据
+      batch-size: 16384
+      # 生产者一端总的可用发送缓冲区大小，为32MB
+      buffer-memory: 33554432
+    consumer:
+      # 消费组ID
+      group-id: defaultConsumerGroup
+      # 如果在当前kafka中找不到当前offset，就读取最早的
+      auto-offset-reset: earliest
+      # 自动提交偏移量
+      enable-auto-commit: true
+      # offset自动提交的时间间隔
+      auto-commit-interval: 1000
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
