--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -64,3 +64,13 @@ xxl.job.triggerpool.slow.max=100
 
 ### xxl-job, log retention days
 xxl.job.logretentiondays=30
+
+#指定当前服务/应用的名字（同样的服务名字相同，不要和别的服务同名）
+dubbo.application.name = dubbo-provider
+dubbo.protocol.name = dubbo
+dubbo.protocol.port = 20880
+#指定注册中心的位置
+dubbo.registry.address = zookeeper://master:2181?backup=slave1:2181,slave2:2181
+#统一设置服务提供方的规则
+dubbo.provider.timeout = 3000
+dubbo.provider.retries= 3
