--- a/xxl-job-core/pom.xml
+++ b/xxl-job-core/pom.xml
@@ -65,6 +65,17 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-framework</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-recipes</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
