动态数据源

--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -70,7 +70,7 @@ dubbo.application.name = dubbo-provider
 dubbo.protocol.name = dubbo
 dubbo.protocol.port = 20880
 #指定注册中心的位置
-dubbo.registry.address = zookeeper://master:2181?backup=slave1:2181,slave2:2181
+dubbo.registry.address = zookeeper://master:2181?backup=master:2182,master:2183
 #统一设置服务提供方的规则
 dubbo.provider.timeout = 3000
 dubbo.provider.retries= 3
