--- a/xxl-job-workbench/src/main/resources/application.yml
+++ b/xxl-job-workbench/src/main/resources/application.yml
@@ -4,16 +4,29 @@ server:
     context-path: /workbench
 
 mybatis:
-  mapper-locations: classpath:mybatis-mapper/*.xml
-  type-aliases-package: com.xxl.job.workbench.dao
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.xxl.job.core.biz.model
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/workbench?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&serverTimezone=GMT
-    username: root
-    password: 123456
-    driverClassName: com.mysql.cj.jdbc.Driver
+    master:
+      url: jdbc:mysql://localhost:3306/workbench?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&serverTimezone=GMT
+      username: root
+      password: 123456
+      driverClassName: com.mysql.cj.jdbc.Driver
+    slave1:
+      url: jdbc:mysql://localhost:3307/workbench?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&serverTimezone=GMT
+      username: root
+      password: 123456
+      driverClassName: com.mysql.cj.jdbc.Driver
+    slave2:
+      url: jdbc:mysql://localhost:3308/workbench?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&serverTimezone=GMT
+      username: root
+      password: 123456
+      driverClassName: com.mysql.cj.jdbc.Driver
+    hikari:
+      leak-detection-threshold: 2000
   kafka:
-    bootstrap-servers: master:9092,slave1:9092,slave2:9092
+    bootstrap-servers: master:9092,master:9093
     producer:
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -39,4 +52,4 @@ dubbo:
   application:
     name: demo-consumer # 消息者名字
   registry:
-    address: zookeeper://master:2181?backup=slave1:2181,slave2:2181
+    address: zookeeper://master:2181?backup=master:2182
