--- a/xxl-job-workbench/pom.xml
+++ b/xxl-job-workbench/pom.xml
@@ -99,6 +99,17 @@
             <artifactId>curator-recipes</artifactId>
             <version>2.8.0</version>
         </dependency>
+
+        <!--引入spring的自带的cache工具-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-cache</artifactId>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
