--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -100,6 +100,13 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.xxl</groupId>
+			<artifactId>job</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
