--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>xxl-job-admin</module>
 		<module>xxl-job-executor-samples</module>
 		<module>xxl-job-workbench</module>
+		<module>xxl-job-delay</module>
     </modules>
 
 	<properties>
