--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>xxl-job-executor-samples</module>
 		<module>xxl-job-workbench</module>
 		<module>xxl-job-delay</module>
+        <module>xxl-job-dp</module>
     </modules>
 
 	<properties>
@@ -25,7 +26,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.test.skip>true</maven.test.skip>
-
+		<hutool.version>5.8.1</hutool.version>
 		<netty-all.version>4.1.58.Final</netty-all.version>
 		<gson.version>2.8.6</gson.version>
 
@@ -48,7 +49,7 @@
 
 		<redisson.version>3.16.8</redisson.version>
 		<lombok.version>1.18.20</lombok.version>
-
+		<guava.version>19.0</guava.version>
 		<dubbo.version>2.7.3</dubbo.version>
 	</properties>
 
