--- a/xxl-job-delay/pom.xml
+++ b/xxl-job-delay/pom.xml
@@ -10,6 +10,11 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <parent>
+        <groupId>com.xuxueli</groupId>
+        <artifactId>xxl-job</artifactId>
+        <version>2.3.0</version>
+    </parent>
     <dependencies>
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -19,7 +24,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>19.0</version>
+            <version>${guava.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
